@@ -94,8 +94,8 @@
 
 // interfaces
 #include "G4LossTableManager.hh"
-#include "G4EmProcessOptions.hh"
 #include "G4UAtomicDeexcitation.hh"
+#include "G4EmParameters.hh"
 
 // particles
 
@@ -130,7 +130,12 @@ G4_DECLARE_PHYSCONSTR_FACTORY(G4EmLowEPPhysics);
 G4EmLowEPPhysics::G4EmLowEPPhysics(G4int ver)
   : G4VPhysicsConstructor("G4EmLowEPPhysics"), verbose(ver)
 {
-  G4LossTableManager::Instance();
+  G4EmParameters* param = G4EmParameters::Instance();
+  param->SetVerbose(verbose);
+  param->SetMinEnergy(100*eV);
+  param->SetMaxEnergy(10*TeV);
+  param->SetNumberOfBinsPerDecade(20);
+  param->ActivateAngularGeneratorForIonisation(true);
   SetPhysicsType(bElectromagnetic);
 }
 
@@ -139,7 +144,12 @@ G4EmLowEPPhysics::G4EmLowEPPhysics(G4int ver)
 G4EmLowEPPhysics::G4EmLowEPPhysics(G4int ver, const G4String&)
   : G4VPhysicsConstructor("G4EmLowEPPhysics"), verbose(ver)
 {
-  G4LossTableManager::Instance();
+  G4EmParameters* param = G4EmParameters::Instance();
+  param->SetVerbose(verbose);
+  param->SetMinEnergy(100*eV);
+  param->SetMaxEnergy(10*TeV);
+  param->SetNumberOfBinsPerDecade(20);
+  param->ActivateAngularGeneratorForIonisation(true);
   SetPhysicsType(bElectromagnetic);
 }
 
@@ -397,28 +407,10 @@ void G4EmLowEPPhysics::ConstructProcess()
       ph->RegisterProcess(new G4hIonisation(), particle);
     }
   }
-    
-  // Em options
-  //      
-  G4EmProcessOptions opt;
-  opt.SetVerbose(verbose);
-  
-  // Multiple Coulomb scattering
-  //
-  opt.SetPolarAngleLimit(CLHEP::pi);
-    
-  // Physics tables
-  //
 
-  opt.SetMinEnergy(100*eV);
-  opt.SetMaxEnergy(10*TeV);
-  opt.SetDEDXBinning(220);
-  opt.SetLambdaBinning(220);
-
-  // Ionization
-  //
-  //opt.SetSubCutoff(true);    
-
+  // Nuclear stopping
+  pnuc->SetMaxKinEnergy(MeV);
+      
   // Deexcitation
   //
   G4VAtomDeexcitation* de = new G4UAtomicDeexcitation();
