@@ -98,7 +98,6 @@
 #include "G4LossTableManager.hh"
 #include "G4VAtomDeexcitation.hh"
 #include "G4UAtomicDeexcitation.hh"
-#include "G4EmProcessOptions.hh"
 
 // particles
 
@@ -133,7 +132,11 @@ G4_DECLARE_PHYSCONSTR_FACTORY(G4EmPenelopePhysics);
 G4EmPenelopePhysics::G4EmPenelopePhysics(G4int ver)
   : G4VPhysicsConstructor("G4EmPenelopePhysics"), verbose(ver)
 {
-  G4LossTableManager::Instance();
+  G4EmParameters* param = G4EmParameters::Instance();
+  param->SetVerbose(verbose);
+  param->SetMinEnergy(100*eV);
+  param->SetMaxEnergy(10*TeV);
+  param->SetNumberOfBinsPerDecade(20);
   SetPhysicsType(bElectromagnetic);
 }
 
@@ -142,7 +145,11 @@ G4EmPenelopePhysics::G4EmPenelopePhysics(G4int ver)
 G4EmPenelopePhysics::G4EmPenelopePhysics(G4int ver, const G4String&)
   : G4VPhysicsConstructor("G4EmPenelopePhysics"), verbose(ver)
 {
-  G4LossTableManager::Instance();
+  G4EmParameters* param = G4EmParameters::Instance();
+  param->SetVerbose(verbose);
+  param->SetMinEnergy(100*eV);
+  param->SetMaxEnergy(10*TeV);
+  param->SetNumberOfBinsPerDecade(20);
   SetPhysicsType(bElectromagnetic);
 }
 
@@ -216,7 +223,6 @@ void G4EmPenelopePhysics::ConstructProcess()
   G4double highEnergyLimit = 100*MeV;
 
   // nuclear stopping
-  G4NuclearStopping* ionnuc = new G4NuclearStopping();
   G4NuclearStopping* pnuc = new G4NuclearStopping();
 
   // Add Penelope EM Processes
@@ -375,7 +381,7 @@ void G4EmPenelopePhysics::ConstructProcess()
 
       ph->RegisterProcess(msc, particle);
       ph->RegisterProcess(ionIoni, particle);
-      ph->RegisterProcess(ionnuc, particle);
+      ph->RegisterProcess(pnuc, particle);
 
     } else if (particleName == "GenericIon") {
 
@@ -385,7 +391,7 @@ void G4EmPenelopePhysics::ConstructProcess()
 
       ph->RegisterProcess(hmsc, particle);
       ph->RegisterProcess(ionIoni, particle);
-      ph->RegisterProcess(ionnuc, particle);
+      ph->RegisterProcess(pnuc, particle);
 
     } else if (particleName == "pi+" ||
                particleName == "pi-" ) {
@@ -457,38 +463,11 @@ void G4EmPenelopePhysics::ConstructProcess()
       
       ph->RegisterProcess(hmsc, particle);
       ph->RegisterProcess(new G4hIonisation(), particle);
-      ph->RegisterProcess(pnuc, particle);
     }
   }
     
-  // Em options
-  //      
-  G4EmProcessOptions opt;
-  opt.SetVerbose(verbose);
-  
-  // Multiple Coulomb scattering
-  //
-  //opt.SetMscStepLimitation(fUseDistanceToBoundary);
-  //opt.SetMscRangeFactor(0.02);
-    
-  // Physics tables
-  //
-
-  opt.SetMinEnergy(100*eV);
-  opt.SetMaxEnergy(10*TeV);
-  opt.SetDEDXBinning(220);
-  opt.SetLambdaBinning(220);
-
   // Nuclear stopping
   pnuc->SetMaxKinEnergy(MeV);
-
-  //opt.SetSplineFlag(true);
-  opt.SetPolarAngleLimit(CLHEP::pi);
-    
-  // Ionization
-  //
-  //opt.SetSubCutoff(true);    
-
   
   // Deexcitation
   //
